# rscobjc

./: .gitignore  CMakeLists.txt  build.sh  init.sh  launch.sh  resources.txt
src/: main.m  project.m
src/include/: project.h
